<resources>
    <string name="app_name">Assignment 2</string>
    <!-- Strings used for fragments for navigation -->


    <string name="Expenses">Expenses</string>
    <string name="AddExpensesText">Add Daily Expenses </string>

    <string name="DateText">Date:</string>
    <string name="DateInput">Enter The Date Of Expense</string>

    <string name="AmountText">Amount (RM)</string>
    <string name="AmountInput">Enter Amount</string>

    <string name="CategoryText">Category</string>

    <string-array name="CategoryInput">
        <item>Food </item>
        <item>Entertainment </item>
        <item>Transport </item>
    </string-array>

    <string-array name="ChoiceInput">
        <item>Please select the category first</item>
    </string-array>

    <string name="PaymentMethodText">Payment Method</string>
    <string name="Cash">Cash</string>
    <string name="CreditCard">Credit Card</string>
    <string name="MobileWallet">Mobile Wallet</string>

    <string name="ExtraDescriptionText"> Extra Description</string>
    <string name="EnterDescriptionHere">Enter Description Here</string>

    <string name="Save">Save</string>
    <string name="Clear">Clear</string>
    <string name="Back">Back</string>
    <string name="select_date">Click Me to Select Date</string>
    <string name="todo">+</string>

    <string name="choiceText">Choice</string>
    
    <string name="categoryType">Category Type</string>
    <string name="choiceType">Choice Type</string>
    <string name="pType">Payment Type</string>
    <string name="descVal">Description Value</string>

</resources>