<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/recordTileLayout"
        android:layout_width="409dp"
        android:layout_height="147dp"
        android:background="@drawable/empty_border"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/DateText"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/AmountLineaer"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AmountText"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amountValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/AmountInput" />
        </LinearLayout>

        <TextView
            android:id="@+id/categoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CategoryText"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoryType"
            android:textAlignment="center" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>