<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddExpenses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:textAlignment="center">


    <TextView
        android:id="@+id/AddExpensesText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/autour_one"
        android:text="@string/AddExpensesText"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinearLay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddExpensesText">

        <TextView
            android:id="@+id/DateText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#1c9cd6"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/DateText"
            android:textAlignment="center"
            android:textColor="#EFEFEF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/DateInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:autofillHints="yyyy/mm/dd"
            android:background="#53B4DF"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/DateInput"
            android:inputType="date"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLay2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay">

        <TextView
            android:id="@+id/AmountText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#1c9cd6"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/AmountText"
            android:textAlignment="center"
            android:textColor="#EFEFEF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/AmountInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="2"
            android:autofillHints="yyyy/mm/dd"
            android:background="#53B4DF"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/AmountInput"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLay3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay2">

        <TextView
            android:id="@+id/CategoryText"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:fontFamily="@font/autour_one"
            android:text="@string/CategoryText"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLay4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="10dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay3">


        <Spinner
            android:id="@+id/CategoryInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#6BCEFA"
            android:entries="@array/CategoryInput"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/CategoryChoice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="#6BCEFA"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLay5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="15dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay4">

        <TextView
            android:id="@+id/PaymentMethodText"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:fontFamily="@font/autour_one"
            android:text="@string/PaymentMethodText"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />


    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay5">

        <RadioButton
            android:id="@+id/Cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1.25"
            android:buttonTint="#0426FF"

            android:text="@string/Cash"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/MobileWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1.25"
            android:buttonTint="#0426FF"
            android:text="@string/MobileWallet"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/CreditCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1.25"
            android:buttonTint="#0426FF"
            android:text="@string/CreditCard"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </RadioGroup>


    <LinearLayout
        android:id="@+id/LinearLay6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="9dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LinearLay7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <TextView
            android:id="@+id/ExtraDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:fontFamily="@font/autour_one"
            android:text="@string/ExtraDescriptionText"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/ExtraDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:background="#1E88E5"
            android:hint="@string/EnterDescriptionHere"
            android:importantForAutofill="no"
            android:inputType="textLongMessage|number|text"
            android:textColor="#FBFBFB" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLay7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="80dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLay6">

        <Button
            android:id="@+id/Save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:background="#221DAF"
            android:fontFamily="@font/autour_one"
            android:text="@string/Save"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F1D6D6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Clear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:background="#221DAF"
            android:fontFamily="@font/autour_one"
            android:text="@string/Clear"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/Back"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"
            android:layout_weight="1"
            android:background="#021DAF"
            android:fontFamily="@font/autour_one"
            android:text="@string/Back"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#F6F6F6"
            android:textSize="20sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>