<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addExpensesPage">

    <TextView
        android:id="@+id/addExpenseTitle"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:fontFamily="@font/autour_one"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:text="@string/AddExpensesText"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/verticalLayout1"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpenseTitle"
        tools:ignore="RtlCompat">

        <LinearLayout
            android:id="@+id/dateEntry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dataTextView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="@string/DateInput"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:hint="@string/DateInput"
                android:lineSpacingExtra="8sp"
                android:orientation="horizontal"
                android:text="@string/DateText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="dd/mm/yy"
                android:background="@drawable/empty_border"
                android:ems="10"
                android:hint="@string/DateInput"
                android:inputType="date"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amountEntry"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center_vertical"
                android:text="@string/AmountText"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:autofillHints="@string/AmountInput"
                android:background="@drawable/empty_border"
                android:ems="10"
                android:hint="@string/AmountInput"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticalLayout1">

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:fontFamily="@font/autour_one"
            android:gravity="center_vertical"
            android:text="@string/CategoryText"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:id="@+id/spinnerLayout"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/empty_border"
                android:entries="@array/CategoryInput"
                android:gravity="center_vertical"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Spinner
                android:id="@+id/choiceSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/empty_border"
                android:entries="@array/ChoiceInput"
                android:gravity="center_vertical"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/redioButtons"
        android:layout_width="410dp"
        android:layout_height="118dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/paymentText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border"
            android:fontFamily="@font/autour_one"
            android:gravity="center_vertical"
            android:text="@string/PaymentMethodText"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="28sp"
            tools:ignore="RtlCompat" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cashRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cash" />
        </RadioGroup>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>